# jarrow

./: Cargo.toml  README.md
benches/: glm_bench.rs
examples/: simple_glm.rs
src/: lib.rs
src/core/: frame.rs  mod.rs  model.rs  score.rs  training.rs
src/glm/: glm_model.rs  mod.rs
tests/: glm.rs
tests/data/: test.csv  train.csv
