[package]
name = "jarrow"
version = "0.1.0"
edition = "2021"

[lib]
name = "jarrow"
path = "src/lib.rs"


[dependencies]
tokio = { version = "1" , features = ["full"] }
arrow = { version = "53.1.0", features = ["ffi"]}
datafusion = {version="43"}
datafusion-expr = { version="43" }
thiserror = "2"
async-trait = "0.1"
chrono = "0.4"
log = "0.4"


[dev-dependencies]
criterion = "0.5"
serial_test = { version = "3.1"}
ctor = "0.2"
env_logger = "0.11"

#
#[[bench]]
#name = "ml_bench"
#harness = false

#[[example]]
#name = "simple"
