[package]
name = "jarrow"
version = "0.1.0"
edition = "2021"

[lib]
name = "jarrow"
path = "src/lib.rs"


[dependencies]
tokio = { version = "1" , features = ["full"] }
arrow = { version = "54", features = ["ffi"]}
datafusion = {version="45"}
datafusion-expr = { version="45" }
thiserror = "2"
async-trait = "0.1"
chrono = "=0.4.38"
log = "0.4"
rand = "0.8"

[dev-dependencies]
criterion = "0.5"
serial_test = { version = "3.1"}
ctor = "0.4"
env_logger = "0.11"

#
#[[bench]]
#name = "ml_bench"
#harness = false

#[[example]]
#name = "simple"
